Fix dark mode toggle

--- a/css/index.css
+++ b/css/index.css
@@ -38,18 +38,18 @@ button.dark-theme {
 
 
 /* Styles for users who prefer dark mode at the OS level */
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {*/
     /* defaults to dark theme */
-    body {
+    body.dark-theme {
         --text-color: #eee;
         --bkg-color: #222;
     }
     /* Override dark mode with light mode styles if the user decides to swap */
-    body.light-theme {
+    body {
         --text-color: #222;
         --bkg-color: #fff;
     }
-}
+/*}*/
 
 body {
     background: var(--bkg-color);
